# ageation

./: .env.example  .gitignore  Brewfile  CLAUDE.md  HISTORY.md  Makefile  NOTATION.md  PIPELINE.md  README.md  STYLE_BOOK.md  justfile  pyproject.toml  render_all.sh  test_scene.py
.github/workflows/: gates.yml  pages.yml
examples/probability/: KICKOFF.md  NOTATION.md  README.md  course.yaml  project.yaml
examples/probability/content/: 01-mathematical-review-script.md  01-mathematical-review.md  02-combinatorics-script.md  02-combinatorics.md  03-basic-concepts-script.md  (+37 more)
scenes/: _style.py
scripts/: site_data.py
site/: howto.html  index.html  showcase.html  style.css
site/data/: site.json
skills/animate-chapter/: SKILL.md
skills/concept-from-tex/: SKILL.md
skills/render-verify/: SKILL.md
skills/scene-from-script/: SKILL.md
skills/script-from-concept/: SKILL.md
tests/: conftest.py  test_check_sync.py  test_doctor.py  test_end_to_end.py  test_evict_cache.py  test_init_course.py  test_init_project.py  test_layout_helpers.py  test_lint_language.py  test_lint_scene.py  test_lint_style.py  test_measure_runtime.py  test_provenance.py  test_render_preflight.py  test_scaffold.py  test_style_helpers.py  test_style_voice.py
tools/: _project.py  assemble.py  check_notation.py  check_status.py  check_sync.py  clean_cache.py  doctor.py  evict_cache.py  init_course.py  init_project.py  lint_language.py  lint_scene.py  lint_style.py  measure_runtime.py  normalize_notation.py  provenance.py  render.py  scaffold.py  stamp_provenance.py  vendor_sources.py
(+15 files in other folders)
