[project]
name = "auto-manim"
version = "0.1.0"
description = "File-based pipeline that turns LaTeX notes into narrated, linked Manim videos"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "manim>=0.20.1",
    "manim-voiceover[gtts]>=0.3.7",
    "setuptools<81",
    "pyyaml>=6.0",
]
